--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@
                 <h1 class="post-title">{{ page.title }}</h1>
                 <p class="post-subtitle">{{ page.subtitle }}</p>
 
-                {% if page.image and paginator.activated == nil %}
+                {% if page.image and page.headerimg and paginator.activated == nil %}
                     <img src="{{ page.image }}" alt="Featured image" class="post-cover">
                 {% endif %}
 
